# esp32-components

./: LICENSE
Invn/: CMakeLists.txt
Invn/Invn/Devices/: DeviceIcm20649.c
Invn/Invn/Devices/Drivers/Icm20649/: Icm20649DataConverter.c  Icm20649DataConverter.h  Icm20649Defs.h  Icm20649Dmp3Driver.c  Icm20649MPUFifoControl.c  Icm20649Setup.c  Icm20649Transport.c
Invn/Invn/Devices/Drivers/Icm20948/: Icm20948Dmp3Driver.c  Icm20948MPUFifoControl.c  Icm20948SelfTest.c  Icm20948Transport.c
